# DarkForge

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD-AND-DEPLOY.md  Makefile  Makefile.local.example  README.md  design.md  project.yml
.github/workflows/: release.yml
Config/: Project.local.xcconfig.example  Project.xcconfig
DarkForge/: Info.plist
DarkForge.xcodeproj/: project.pbxproj
DarkForge/App/: AppDelegate.swift  ConfigurationsViewController.swift  FileManagerViewController.swift  (+3 more)
docs/: BUILD-AND-DEPLOY.md  CRASH-INVESTIGATION.md  CREATING-PACKAGES.md  GITHUB-RELEASES.md  KERNEL-INVESTIGATION.md  OFFSETS.md  REPO.md  USING-REPL.md  creating-skills.md  jsc-bridge-development-guide.md
libraries/: zip.js  zip.json
scripts/: dyld_pac_sign.js  dyld_pac_sign2.js  escalate.js  escalate_full.js  find_procs.js  hexdump_task.js  ipc_decode.js  kinfo.js  port_forge.js  probe_offsets.js  unsandbox_label.js  verify_exc_state.js  vm_unprotect.js  walk_all_procs.js
skills/: block-ota.js  block-ota.json  decrypt-ipa.js  decrypt-ipa.json  list-installed-apps.js  list-installed-apps.json  zip.js
tests/: test_kserver_download.py  test_package_manager.py  test_webui_assets.py
tools/: krepl.py  kserver.py  package_manager.py
tools/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tools/desktop/src-tauri/capabilities/: default.json
tools/desktop/src-tauri/icons/: icon.icns
tools/desktop/src-tauri/permissions/autogenerated/: get_server_runtime.toml  restart_server.toml  save_server_config.toml
tools/desktop/src-tauri/src/: lib.rs  main.rs
(+41 files in other folders)
