[package]
name = "darkforge-desktop"
version = "0.1.0"
description = "DarkForge Console desktop app"
edition = "2021"
rust-version = "1.70"

[lib]
name = "darkforge_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "darkforge-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
